--- a/style.css
+++ b/style.css
@@ -74,11 +74,11 @@ a:hover {
 }
 
 .skills {
-  height: 74px;
+  height: 80px;
 }
 
 .experience {
-  height: 300px;  
+  height: 328px;  
 }
 
 .education {  
@@ -100,4 +100,8 @@ a:hover {
 
 .bottom-space {
   margin-bottom: 6px;
+}
+
+.bullet {
+  margin-bottom: 3px;
 }
